# tauri-playground

./: package.json
.github/workflows/: build-tauri.yml
src/: bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/routes/: +page.svelte
